--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 npm RACK_ENV=development
 PORT=3000
-SENDGRID_KEY = "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"
+SENDGRID_KEY = "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"
